Many fixes to Fishbone skin 	     - compliance notes from MrC 	     - use frameset Doctype in index 	     - close anchor tags in status_list 	     - notes from Philip Meyer 	     - spacing in help and server settings 	     - fix targets for some browse links 	     - fix highlight of top right links 	     - fix an issue where tan style woudl flash in status 	     pane (strangely, simply by swapping the order in the 	     header)
git-svn-id: file:///home/awy/mirror/slim/trunk/server@4401 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/HTML/Fishbone/slimserver.css
+++ b/HTML/Fishbone/slimserver.css
@@ -15,6 +15,18 @@ H3 {
 	padding: 2 0 2 0;
 }
 
+H4
+{
+	padding: 0 8 0 8;
+}
+
+H5 {
+	font-size : 10pt;
+	font-weight : bold;	
+	text-align : left;
+	margin:2 0 2 0;
+	padding: 2 0 2 0;
+}
 
 TD, P, A {
 	font-family: Verdana, Arial, Helvetica, sans-serif;
@@ -102,13 +114,17 @@ A.linkbtn:hover {
 .stdclick {
    font : 9px Arial; 
    color: Yellow;
-   background-color : rgb(25,25,25);  
+   background-color : rgb(25,25,25);
+   margin-bottom: 2px;
+   margin-top: 2px;
 }
 
 .stdedit {
    font-family: Verdana, Arial, Helvetica, sans-serif; 
    background-color : rgb(255,255,255); 
    padding : 1px;
+   margin-bottom: 2px;
+   margin-top: 2px;
    font-size:9px;
    background:#ddd;
    color:#444;
@@ -125,6 +141,13 @@ A.linkbtn:hover {
 	background:#333;
 	color:white;
 	border-bottom:2px solid white;
+}
+
+.faq
+{
+	padding: 0 8 0 8;
+	margin:0px;
+	margin-top: 8px;
 }
 
 .nowplaying
@@ -197,7 +220,7 @@ A.linkbtn:hover {
 	margin:0px;
 	margin-top: 8px;
 	_width: 100%;
-	_height: 100%;
+	_height: 98%;
 }
 
 .playlist
@@ -205,8 +228,6 @@ A.linkbtn:hover {
 	padding: 0 8 0 8;
 	margin:0px;
 	margin-top: 8px;
-	height: auto;
-	_width: 100%;
 	overflow: auto;
 }
 
